STGeomFromTextFunctionTest was fixed.